# DLL-Sideloading

./: README.md
Annual-Report/: IMPORTANT.txt  annual_review_2024.pptx
C2-Server/: main.py  requirements.txt
Implant/telemetryhost/: Cargo.toml
Implant/telemetryhost/src/: lib.rs
